Add advanced inventory dashboard features